# riftguard

./: .dockerignore  .env.schema  .gitignore  README.md  SECURITY.md  docker-compose.yml  package.json  turbo.json
.datagrip/: README.md
.docs/api/: STRUCTURE.md
.docs/ingest/: MODELS.md  STRUCTURE.md
.docs/pipeline/: DATABASE.md
.infra/pipeline/: Dockerfile
apps/api/: .air.toml  Makefile  go.mod  package.json
apps/api/cmd/server/: main.go
apps/api/internal/config/: env.go
apps/dashboard/: package.json  tailwind.config.ts
apps/dashboard/app/: layout.tsx
apps/dashboard/app/(site)/: layout.tsx  page.tsx
apps/dashboard/lib/: fonts.ts  metadata.ts
apps/ingest/: Makefile  package.json  pyproject.toml
apps/ingest/src/: cli.py  main.py
apps/ingest/src/adapters/: db.py  usgs.py
apps/ingest/src/config/: env.py
apps/ingest/src/domain/: earthquake.py  feature.py
apps/ingest/src/repository/: earthquake.py  models.py
apps/ingest/src/routes/: v1.py
apps/landing/: package.json  tsconfig.json
apps/landing/app/: layout.tsx
apps/landing/app/(site)/: layout.tsx  page.tsx
apps/landing/lib/: fonts.ts  metadata.ts
apps/ml/: package.json  pyproject.toml
apps/pipeline/: Makefile  package.json  pyproject.toml
apps/pipeline/migrations/: env.py
apps/pipeline/migrations/versions/: 251d1235bb52_fix_integer_overflow_for_time_fields.py  266343da7b4a_convert_time_fields_to_datetime_and_.py  a42081615b36_initial_migration.py
apps/pipeline/src/: cli.py  main.py
apps/pipeline/src/adapters/: db.py  usgs.py
apps/pipeline/src/config/: env.py
(+11 files in other folders)
