[project]
name = "ingest"
version = "0.1.0"
description = "It collects real-time seismic data from global monitoring stations and feeds it into the prediction engine. It ensures a constant stream of accurate earthquake information for early tsunami detection."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "sqlalchemy[asyncio]>=2.0.46",
    "typer[all]>=0.24.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
